fix: solve pinocchiop image error

--- a/index.html
+++ b/index.html
@@ -584,7 +584,7 @@
           <div class="title">Favorite Producers</div>
           <div class="producers-row">
             <div class="producer">
-              <div class="producer-image" style="background-image: url('https://pbs.twimg.com/profile_images/1245298601519005699/irD4INcE_400x400.jpg');"></div>
+              <div class="producer-image" style="background-image: url('https://static.wikia.nocookie.net/vocaloid/images/d/d0/PinocchioDoushite.jpg');"></div>
               <div class="producer-name">Pinocchio-P</div>
             </div>
             <div class="producer">
