feat: add Nino Nakano to favorite characters

--- a/index.html
+++ b/index.html
@@ -226,15 +226,15 @@
             <div class="character-name">Black Rock Shooter</div>
           </div>
           <div class="character">
-            <div class="character-image" style="background-image: url('https://pbs.twimg.com/media/C5GqiNXUYAA0A8n.jpg:large');"></div>
+            <div class="character-image" style="background-image: url('https://i.pinimg.com/564x/2e/bf/3b/2ebf3b9b2e9aaf379742e926ae953806.jpg');"></div>
             <div class="character-name">Kirito</div>
           </div>
           <div class="character">
-            <div class="character-image" style="background-image: url('https://i.quotev.com/u/15/4/19/t/Mugshot_of_Erza.jpg');"></div>
-            <div class="character-name">Erza Scarlet</div>
+            <div class="character-image" style="background-image: url('https://s4.anilist.co/file/anilistcdn/character/large/b126372-DtorHRgQaYUJ.png');"></div>
+            <div class="character-name">Nino Nakano</div>
           </div>
           <div class="character">
-            <div class="character-image" style="background-image: url('https://i.ytimg.com/vi/_0i_3qeMhBQ/maxresdefault.jpg');"></div>
+            <div class="character-image" style="background-image: url('https://static.zerochan.net/Ishigami.Senkuu.full.2855258.jpg');"></div>
             <div class="character-name">Senkuu</div>
           </div>
           <div class="character">
@@ -248,8 +248,8 @@
             <div class="character-name">Lucy Heartfilia</div>
           </div>
           <div class="character">
-            <div class="character-image" style="background-image: url('https://www.anime-planet.com/images/anime/covers/thumbs/18515.jpg');"></div>
-            <div class="character-name">Bojji</div>
+            <div class="character-image" style="background-image: url('https://64.media.tumblr.com/599d38453700ee28fbac86befa0ea9fe/05a2577d70ea8869-dc/s640x960/2aace725429ab4f0316c5c59e60ec51388ca920f.png');"></div>
+            <div class="character-name">Cú Chulainn</div>
           </div>
           <div class="character">
             <div class="character-image" style="background-image: url('https://cdn.myanimelist.net/images/characters/7/281783.jpg');"></div>
@@ -260,8 +260,8 @@
             <div class="character-name">Mash Kyrielight</div>
           </div>
           <div class="character">
-            <div class="character-image" style="background-image: url('https://64.media.tumblr.com/599d38453700ee28fbac86befa0ea9fe/05a2577d70ea8869-dc/s640x960/2aace725429ab4f0316c5c59e60ec51388ca920f.png');"></div>
-            <div class="character-name">Cú Chulainn</div>
+            <div class="character-image" style="background-image: url('https://i.pinimg.com/564x/d3/4f/c3/d34fc3ccb70031ab01470535b6a41eff.jpg');"></div>
+            <div class="character-name">Bojji</div>
           </div>
         </div>
         <div class="characters-row">
