fix: ending banner error

--- a/index.html
+++ b/index.html
@@ -401,7 +401,7 @@
       </div>
     </div>
 
-    <div class="section-banner" style="background-position: center; background-image: url('http://i2.hdslb.com/bfs/archive/e9e368a312e0252d32d23991076378c75e853486.jpg');">
+    <div class="section-banner" style="background-position: center; background-image: url('https://wallpapercave.com/wp/wp9020742.png');">
 
       <div class="wave-invert-3">
         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
