refactor: change favorite openings cover

--- a/index.html
+++ b/index.html
@@ -289,7 +289,7 @@
       </div>
     </div>
 
-    <div class="section-banner" style="background-position: top; background-image: url('https://wallpapersmug.com/large/bf7694/Artoria-Pendragon-saber-fate.jpg');">
+    <div class="section-banner" style="background-position: top; background-image: url('https://user-images.githubusercontent.com/43749971/171059266-028d71d4-4c5a-43d3-b459-f587da401ace.jpg');">
 
       <div class="wave-invert-3">
         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
