Feat: add Najimi

--- a/index.html
+++ b/index.html
@@ -248,8 +248,8 @@
             <div class="character-name">Lucy Heartfilia</div>
           </div>
           <div class="character">
-            <div class="character-image" style="background-image: url('https://64.media.tumblr.com/599d38453700ee28fbac86befa0ea9fe/05a2577d70ea8869-dc/s640x960/2aace725429ab4f0316c5c59e60ec51388ca920f.png');"></div>
-            <div class="character-name">Cú Chulainn</div>
+            <div class="character-image" style="background-image: url('https://user-images.githubusercontent.com/43749971/195876358-d5b3c2ce-d631-492e-b3b9-5badadb6890b.jpg');"></div>
+            <div class="character-name">Najimi Osana</div>
           </div>
           <div class="character">
             <div class="character-image" style="background-image: url('https://cdn.myanimelist.net/images/characters/7/281783.jpg');"></div>
