Feat: add Komi-san ending

--- a/index.html
+++ b/index.html
@@ -499,12 +499,12 @@
           </a>
         </div>
         <div class="endings-row">
-          <a class="ending" href="https://youtu.be/nrvfKYc9lcU" target="_blank">
-            <div class="ending-image" style="background-image: url('https://64.media.tumblr.com/148ab67f299c9fb65609c2cd0540685a/1291e6b30fdf9bf0-9d/s1280x1920/71761b4241a4e21fc8e9c1ea665a7a4fb4d57045.png');"></div>
-            <div class="ending-anime">Fate/Grand Order: Babylonia</div>
-            <div class="ending-name">Prover</div>
+          <a class="ending" href="https://youtu.be/ciui5edjw4I" target="_blank">
+            <div class="ending-image" style="background-image: url('https://user-images.githubusercontent.com/43749971/195877301-41a0c8b5-4f3a-4491-b39b-5c44782898fd.jpg');"></div>
+            <div class="ending-anime">Komi-san Can't Communicate</div>
+            <div class="ending-name">Koshaberi Biyori</div>
           </a>
-          <a class="ending" href="https://www.youtube.com/watch?v=xi2cefj5pOU" target="_blank">
+          <a class="ending" href="https://youtu.be/xi2cefj5pOU" target="_blank">
             <div class="ending-image" style="background-image: url('https://i.pinimg.com/originals/22/e6/cf/22e6cf13599979b7a0d8a931efe84e05.jpg');"></div>
             <div class="ending-anime">Fruits Basket</div>
             <div class="ending-name">Eden</div>
