Refactor: change fate op link

--- a/index.html
+++ b/index.html
@@ -339,7 +339,7 @@
 
       <div class="top-10-openings">
         <div class="openings-row">
-          <a class="opening" href="https://www.youtube.com/watch?v=irMR7DqMRHA" target="_blank">
+          <a class="opening" href="https://youtu.be/irMR7DqMRHA" target="_blank">
             <div class="opening-image" style="background-image: url('https://i.pinimg.com/originals/88/7d/d4/887dd496e1b3d20c4cffa43366dfa3ac.jpg');"></div>
             <div class="opening-anime">Fate Unlimited Blade Works</div>
             <div class="opening-name">Brave Shine</div>
