Refactor: change yamada-kun op link

--- a/index.html
+++ b/index.html
@@ -344,7 +344,7 @@
             <div class="opening-anime">Fate Unlimited Blade Works</div>
             <div class="opening-name">Brave Shine</div>
           </a>
-          <a class="opening" href="https://www.youtube.com/watch?v=QHFif7LRylw" target="_blank">
+          <a class="opening" href="https://youtu.be/QHFif7LRylw" target="_blank">
             <div class="opening-image" style="background-image: url('https://i.pinimg.com/originals/15/c8/0e/15c80e3e77dba68ceaa56e51e5629f4d.jpg');"></div>
             <div class="opening-anime">Yamada-kun and the Seven Witches</div>
             <div class="opening-name">Kuchizuke Diamond</div>
