--- a/index.html
+++ b/index.html
@@ -351,7 +351,7 @@
           </a>
         </div>
         <div class="openings-row">
-          <a class="opening" href="https://www.youtube.com/watch?v=1ODMew2vLfE" target="_blank">
+          <a class="opening" href="https://youtu.be/1ODMew2vLfE" target="_blank">
             <div class="opening-image" style="background-image: url('https://i.imgur.com/VRZKozU.png');"></div>
             <div class="opening-anime">Nagi no Asukara</div>
             <div class="opening-name">Ebb and flow</div>
