Refactor: update haikyu op img

--- a/index.html
+++ b/index.html
@@ -356,7 +356,7 @@
             <div class="opening-anime">Nagi no Asukara</div>
             <div class="opening-name">Ebb and flow</div>
           </a>
-          <a class="opening" href="https://www.youtube.com/watch?v=rBSfI10pXHM" target="_blank">
+          <a class="opening" href="https://youtu.be/rBSfI10pXHM" target="_blank">
             <div class="opening-image" style="background-image: url('https://coub-anubis-a.akamaized.net/coub_storage/coub/simple/cw_timeline_pic/a20bda9fe1d/702da62e8131728c6aae0/med_1476686429_image.jpg');"></div>
             <div class="opening-anime">Haikyuu!!</div>
             <div class="opening-name">Hikari Are</div>
