Refactor: change rere op img

--- a/index.html
+++ b/index.html
@@ -363,7 +363,7 @@
           </a>
         </div>
         <div class="openings-row">
-          <a class="opening" href="https://www.youtube.com/watch?v=fodAJ-1dN3I" target="_blank">
+          <a class="opening" href="https://youtu.be/fodAJ-1dN3I" target="_blank">
             <div class="opening-image" style="background-image: url('https://i.ytimg.com/vi/03jN5Llxr6k/maxresdefault.jpg');"></div>
             <div class="opening-anime">Boku Dake ga Inai Machi</div>
             <div class="opening-name">Re:Re:</div>
