Refactor: change faity tail op

--- a/index.html
+++ b/index.html
@@ -380,7 +380,7 @@
             <div class="opening-anime">Black Clover</div>
             <div class="opening-name">Black Catcher</div>
           </a>
-          <a class="opening" href="https://www.youtube.com/watch?v=aqRuzjIBkxY" target="_blank">
+          <a class="opening" href="https://youtu.be/aqRuzjIBkxY" target="_blank">
             <div class="opening-image" style="background-image: url('https://i.pinimg.com/originals/ff/b2/e1/ffb2e1e80d6f6468ee96b09c933f6ae3.jpg');"></div>
             <div class="opening-anime">Fairy Tail</div>
             <div class="opening-name">Masayume Chasing</div>
