Refactor: change dr stone op link

--- a/index.html
+++ b/index.html
@@ -387,7 +387,7 @@
           </a>
         </div>
         <div class="openings-row">
-          <a class="opening" href="https://www.youtube.com/watch?v=SohCAjC-Npk" target="_blank">
+          <a class="opening" href="https://youtu.be/SohCAjC-Npk" target="_blank">
             <div class="opening-image" style="background-image: url('https://images8.alphacoders.com/104/1046436.jpg');"></div>
             <div class="opening-anime">Dr. Stone</div>
             <div class="opening-name">Sangenshoku</div>
